# omnicore-meter-suite

./: .gitignore  BUILD_INSTRUCTIONS.md  CLAUDE.md  COMPLIANCE_RULES_GUIDE.md  HEX_DUMP_LOG_DEGISIKLIKLERI.txt  RELEASING.md  compliance_config_draft.toml  package-lock.json
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
code/: CLAUDE.md  generate-icons.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
code/src/: app.css
code/src-tauri/: Cargo.toml  compliance_rules.toml  tauri.conf.json
code/src-tauri/capabilities/: default.json
code/src-tauri/icons/: icon.icns
code/src-tauri/src/: i18n.rs  lib.rs
code/src-tauri/src/commands/: events.rs  io.rs  logger.rs  mod.rs  sessions.rs  state.rs  types.rs
code/src-tauri/src/compliance/: config.rs  engine.rs  mod.rs  rules.rs  types.rs  updater.rs
code/src-tauri/src/serial/: iec62056.rs  mod.rs
context/: COMPLIANCE_KURALLARI.md  fulldata.txt  omnicore_page_design.md  uyum.md
context/design-guides/: code.html  index.html
context/design-guides/css/: main.css
context/design-guides/fonts/: material-symbols.css  spline-sans.css
context/design-guides/js/: app.js  tailwind-config.js
context/tedas/: compliance-plan.md
src/: App.svelte  main.ts
src-tauri/: tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/serial/: iec62056.rs  port.rs
src-tauri/src/storage/: database.rs  mod.rs
src/lib/i18n/: en.ts  tr.ts
static/fonts/: material-symbols.css  spline-sans.css
(+69 files in other folders)
