[package]
name = "omnicore-meter-suite"
version = "0.1.0"
description = "Desktop application for reading and programming Turkish MASS-compliant electricity meters"
authors = ["OmniCore Systems"]
edition = "2021"
default-run = "omnicore-meter-suite"

[lib]
name = "omnicore_meter_suite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.3"
tokio = { version = "1", features = ["full", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
dirs = "6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
